manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"web-app","namespace":"production"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"web-app"}},"template":{"metadata":{"labels":{"app":"web-app"}},"spec":{"containers":[{"image":"nginx:1.27","livenessProbe":{"failureThreshold":3,"httpGet":{"path":"/","port":80},"initialDelaySeconds":10,"periodSeconds":15,"timeoutSeconds":2},"name":"nginx","ports":[{"containerPort":80}],"readinessProbe":{"failureThreshold [...]
  creationTimestamp: "2026-08-17T08:45:20Z"
  generation: 9
  labels:
    app: web-app
  name: web-app
  namespace: production
  resourceVersion: "173046"
  uid: 36e00666-e239-4356-a01b-5b3702ee1252
spec:
  progressDeadlineSeconds: 600
  replicas: 8
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: nginx:1.27
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 2
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 8
  conditions:
  - lastTransitionTime: "2026-08-17T08:45:20Z"
    lastUpdateTime: "2026-08-17T09:59:52Z"
    message: ReplicaSet "web-app-845b6db458" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-08-18T08:14:55Z"
    lastUpdateTime: "2026-08-18T08:14:55Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 9
  readyReplicas: 8
  replicas: 8
  terminatingReplicas: 0
  updatedReplicas: 8
