manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-08-17T08:46:47Z"
  labels:
    app: web-app
  name: web-service
  namespace: production
  resourceVersion: "4277"
  uid: 21839d14-1e8a-46fd-a51a-ba1641ba7806
spec:
  clusterIP: 10.103.124.29
  clusterIPs:
  - 10.103.124.29
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
